--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
   "devDependencies": {
     "ava": "^0.22.0",
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.0"
+    "babel-preset-env": "^1.6.0",
+    "virtual-dom": "^2.1.1"
   },
   "ava": {
     "require": [
       "babel-register"
     ]
   },
-  "dependencies": {
-    "virtual-dom": "^2.1.1"
-  }
+  "dependencies": {}
 }
