--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "ava --verbose"
+    "dev": "concurrently \"tsc --watch\" \"ava --verbose --watch build/test\"",
+    "test": "ava"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ava": "^0.22.0",
+    "@types/virtual-dom": "^2.0.27",
+    "ava": "masaeedu/ava",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "concurrently": "^3.5.0",
     "typescript": "^2.5.3",
     "virtual-dom": "^2.1.1"
   },
